# async-refresh-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: get-time.rs
src/: lib.rs
