[package]
name = "async-refresh"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
log = "0.4"
tokio = { version = "1", features = ["time", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
